# I-m-Here

./: .gitignore  .gitmodules  .travis.yml  Makefile  Readme.md  return_SUCCESS_ImHere_Concept.pptx  return_SUCCESS_ImHere_Proposal.docx
Pi/: Client.py
Web/: .travis.yml  package.json
caffe/: CMakeLists.txt  Makefile
caffe/extract_descriptor/: CMakeLists.txt  classification.cpp  classification.h  crop_face_img.cpp  crop_face_img.h  deploy.prototxt  extract_descriptor.cpp  vgg_face_deploy.prototxt
caffe/include/: classification.cpp  classification.h  demo.cpp  vgg_face_deploy.prototxt
caffe/include/caffe/: layer_factory.hpp  net.hpp
caffe/src/caffe/: layer_factory.cpp  net.cpp
caffe/src/caffe/util/: upgrade_proto.cpp
